feat: :sparkles: Component integration and refactoring